Fix heading text align scoping

--- a/website/source/assets/stylesheets/_home.scss
+++ b/website/source/assets/stylesheets/_home.scss
@@ -4,7 +4,6 @@
     color: $purple-text;
     font-family: $font-family-klavika;
     text-transform: uppercase;
-    text-align: center;
   }
 
   .hero {
@@ -48,6 +47,8 @@
 
     h2 {
       color: $blue-text;
+      text-align: center;
+
     }
 
     hgroup {
@@ -57,10 +58,12 @@
       h3 {
         font-weight: bold;
         margin-bottom: $baseline;
+        text-align: center;
       }
 
       h4 {
         font-size: 20px;
+        text-align: center;
         line-height: $baseline * 1.5;
       }
       p {
@@ -75,6 +78,7 @@
 
     h2 {
       color: $white;
+      text-align: center;
     }
 
     pre {
@@ -92,6 +96,7 @@
 
     h2 {
       color: $dark-gray-text;
+      text-align: center;
     }
 
     .customer-logos {
